--- a/proyecto_final/reporte/reporte.tex
+++ b/proyecto_final/reporte/reporte.tex
@@ -284,7 +284,7 @@ Elástica (Resorte) & $\frac{1}{2}k{x}^2$ \\ \bottomrule
 \subsubsection{Modelo directo}
 
 
-Para efectos de la obtención de este modelo se considera el centro del robot como el punto medio en el eje de las ruedas. La posición de este punto de describe por el vector $p_0$. Se toma que cuando el robot está orientado hacia el eje x positivo, entonces su ángulo de orientación es $0^\circ$. Luego se define el ángulo de orientación $\theta$ como el medido a partir del eje x positivo. Como se muestra en la figura %ref
+Para efectos de la obtención de este modelo se considera el centro del robot como el punto medio en el eje de las ruedas (también se le llama centro geométrico). La posición de este punto de describe por el vector $p_0$. Se toma que cuando el robot está orientado hacia el eje x positivo, entonces su ángulo de orientación es $0^\circ$. Luego se define el ángulo de orientación $\theta$ como el medido a partir del eje x positivo. Como se muestra en la figura %ref
 
 La posición de cada motor se decribe por los vectores $p_L$ y $p_R$ para el motor izquierdo y derecho respectivamente. Note que, utilizando álgebra de vectores, se puede deducir que: 
 
@@ -307,14 +307,14 @@ Note que $\cos(90^\circ-\theta(t))=\sin(\theta(t))$ y que $\sin(90^\circ-\theta(
 \label{eq:global_position}
 \end{equation}
 
-Se define que $\mathbf{p_0}(t)=\left[ \begin{array}{c c} x(t) & y(t) \end{array} \right]^t$, entonces tome $\dot{\mathbf{p_0}}(t)=\mathbf{v_0}(t)=\left[ \begin{array}{c c} \dot{x}(t) & \dot{y}(t) \end{array} \right]^t$. 
+Se define que $\mathbf{p_0}(t)=\left[ \begin{array}{c c} x(t) & y(t) \end{array} \right]^t$, entonces tome $\dot{\mathbf{p_0}}(t)=\mathbf{v_0}(t)=\left[ \begin{array}{c c} \dot{x}(t) & \dot{y}(t) \end{array} \right]^t$ y $\dot{\theta}(t)=\omega(t)$. 
 
 Derivando (\ref{eq:global_position})se obtiene:
 
 \begin{equation}
 \begin{cases}
-\dot{\mathbf{p_R}}(t)=\mathbf{v_R}(t)=\mathbf{v_0}(t)+\left[  \begin{array}{c c} \frac{b}{2}\cos(\theta(t)) \dot{\theta}(t) &  \frac{b}{2}\sin(\theta(t)) \dot{\theta}(t) \end{array}\right]^t \\
-\dot{\mathbf{p_L}}(t)=\mathbf{v_L}(t)=\mathbf{v_0}(t)+\left[  \begin{array}{c c}-\frac{b}{2}\cos(\theta(t)) \dot{\theta}(t) & -\frac{b}{2}\sin(\theta(t)) \dot{\theta}(t) \end{array}\right]^t
+\dot{\mathbf{p_R}}(t)=\mathbf{v_R}(t)=\mathbf{v_0}(t)+\left[  \begin{array}{c c} \frac{b}{2}\cos(\theta(t)) \omega(t) &  \frac{b}{2}\sin(\theta(t)) \omega(t) \end{array}\right]^t \\
+\dot{\mathbf{p_L}}(t)=\mathbf{v_L}(t)=\mathbf{v_0}(t)+\left[  \begin{array}{c c}-\frac{b}{2}\cos(\theta(t)) \omega(t) & -\frac{b}{2}\sin(\theta(t)) \omega(t) \end{array}\right]^t
 \end{cases}
 \label{eq:global_velocities}
 \end{equation}
@@ -324,10 +324,10 @@ Reescribiendo (\ref{eq:global_velocities}), pero sustituyendo que $\mathbf{v_n}=
 \begin{equation}
 \begin{cases}
 \begin{array}{c c c c c}
-v_R\cos(\theta(t)) &=&v_0\cos(\theta(t))&+&\frac{b}{2}\cos(\theta(t))\dot{\theta}(t)\\
-v_R\sin(\theta(t)) &=&v_0\sin(\theta(t))&+&\frac{b}{2}\sin(\theta(t))\dot{\theta}(t)\\
-v_L\cos(\theta(t)) &=&v_0\cos(\theta(t))&+&\frac{b}{2}\cos(\theta(t))\dot{\theta}(t)\\
-v_L\sin(\theta(t)) &=&v_0\sin(\theta(t))&+&\frac{b}{2}\sin(\theta(t))\dot{\theta}(t)
+v_R\cos(\theta(t)) &=&v_0\cos(\theta(t))&+&\frac{b}{2}\cos(\theta(t))\omega(t)\\
+v_R\sin(\theta(t)) &=&v_0\sin(\theta(t))&+&\frac{b}{2}\sin(\theta(t))\omega(t)\\
+v_L\cos(\theta(t)) &=&v_0\cos(\theta(t))&+&\frac{b}{2}\cos(\theta(t))\omega(t)\\
+v_L\sin(\theta(t)) &=&v_0\sin(\theta(t))&+&\frac{b}{2}\sin(\theta(t))\omega(t)
 \end{array}
 \end{cases}
 \label{eq:velocities_system}
@@ -337,21 +337,21 @@ De (\ref{eq:velocities_system}) suponga que $\cos(\theta(t))\neq 0$, entonces se
 
 \begin{equation}
 \begin{cases}
-v_R(t)=v_0(t)+\frac{b}{2}\dot{\theta}(t)\\
-v_L(t)=v_0(t)-\frac{b}{2}\dot{\theta}(t)
+v_R(t)=v_0(t)+\frac{b}{2}\omega(t)\\
+v_L(t)=v_0(t)-\frac{b}{2}\omega(t)
 \end{cases}
 \label{eq:local_vel_wheels}
 \end{equation}
 
-Note que como lo que se puede controlar es $\omega_R$ y $\omega_L$, las velociddes angulares de los motores derecho e izquierdo respectivamente. Entonces se despeja $v_0$ y $\dot{\theta}(t)$ en términos de $v_R$ y $v_L$ y si se toma en consideración que el radio de las ruedas es $r$, se obtiene el resultado en (\ref{eq:local_vel}) y en (\ref{eq:local_dir}).
+Note que como lo que se puede controlar es $\varphi_R$ y $\varphi_L$, las velociddes angulares de los motores derecho e izquierdo respectivamente. Entonces se despeja $v_0$ y $\omega(t)$ en términos de $v_R$ y $v_L$ y si se toma en consideración que el radio de las ruedas es $r$, se obtiene el resultado en (\ref{eq:local_vel}) y en (\ref{eq:local_dir}).
 
 \begin{equation}
-v_0(t)         =\frac{r}{2}(\omega_R(t)+\omega_L(t))
+v_0(t)         =\frac{r}{2}(\varphi_R(t)+\varphi_L(t))
 \label{eq:local_vel}
 \end{equation} 
 
 \begin{equation}
-\dot{\theta(t)}=\frac{r}{b}(\omega_R(t)-\omega_L(t))
+\dot{\theta}(t)=\frac{r}{b}(\varphi_R(t)-\varphi_L(t))
 \label{eq:local_dir}
 \end{equation}
 
@@ -366,7 +366,7 @@ Entonces, sustituyendo (\ref{eq:local_vel}) en (\ref{eq:global_vel}), y tomadno 
 \begin{equation}
 \left[
 \begin{array}{c}
-\dot{x}(t)\\\dot{y}(t)\\\dot{\theta}(t)
+\dot{x}(t)\\\dot{y}(t)\\\omega(t)
 \end{array}
 \right]
 =
@@ -379,20 +379,20 @@ Entonces, sustituyendo (\ref{eq:local_vel}) en (\ref{eq:global_vel}), y tomadno 
 \right]
 \left[
 \begin{array}{c}
-\omega_R(t)\\ \omega_L(t)
+\varphi_R(t)\\ \varphi_L(t)
 \end{array}
 \right]
 \label{eq:kinematic_model_matrix}
 \end{equation}
 
-Se definen los siguientes vectores, para simplificar la notación de esta sección: $\nu(t)=\left[\begin{array}{c c c}\dot{x}(t)&\dot{y}(t)&\dot{\theta}(t)\end{array}\right]^t$ y $\omega(t)=\left[\begin{array}{c c} \omega_R(t)& \omega_L(t) \end{array} \right]^t$. Se define $\Lambda(t)$, como la matriz en (\ref{eq:kinematic_model_matrix}). De esta menra de reescribe la ecuación como:
+Se definen los siguientes vectores, para simplificar la notación de esta sección: $\nu(t)=\left[\begin{array}{c c c}\dot{x}(t)&\dot{y}(t)&\omega(t)\end{array}\right]^t$ y $\varphi(t)=\left[\begin{array}{c c} \varphi_R(t)& \varphi_L(t) \end{array} \right]^t$. Se define $\Lambda(t)$, como la matriz en (\ref{eq:kinematic_model_matrix}). De esta menra de reescribe la ecuación como:
 
 \begin{equation}
-\mathbf{\nu}(t)=\Lambda(t) \mathbf{\omega}(t)
+\mathbf{\nu}(t)=\Lambda(t) \mathbf{\varphi}(t)
 \label{eq:kinematic_model}
 \end{equation}
 
-La ecuación (\ref{eq:kinematic_model}) representa el modelo cinemático directo del sistema. Ya que relaciona la entrada ($\mathbf{\omega}(t)$), con la salida ($\mathbf{\nu}(t)$). %mismo resultado que Trajectory Tracking Control for a Differential Drive Wheeled Mobile Robot Considering the Dynamics Related to the Actuators and Power Stage
+La ecuación (\ref{eq:kinematic_model}) representa el modelo cinemático directo del sistema. Ya que relaciona la entrada ($\mathbf{\varphi}(t)$), con la salida ($\mathbf{\nu}(t)$). %mismo resultado que Trajectory Tracking Control for a Differential Drive Wheeled Mobile Robot Considering the Dynamics Related to the Actuators and Power Stage
 
 \subsubsection{Modelo inverso}
 
@@ -408,12 +408,17 @@ Para encontrar la cinemática inversa, es necesario encontrar las velocidades de 
 \label{eq:pseudoinverse}
 \end{equation}
 
-El modelo cinemático inverso viene dado por:
+El modelo cinemático inverso viene dado por (\ref{eq:inverse_kinematic_model}):
 
 \begin{equation}
-\mathbf{\omega}(t)=\Lambda^{-1}\mathbf{\nu}(t)
+\mathbf{\varphi}(t)=\Lambda^{-1}\mathbf{\nu}(t)
 \label{eq:inverse_kinematic_model}
 \end{equation}
+
+La ecuación en (\ref{eq:inverse_kinematic_model}) muestra al vector de velocidades angulares en las ruedas en términos de la velocidad traslacional del centro geométrico del robot y la velocidad angular del robot. Sin embargo por la no holonomicidad %OJO hay que citar esto. No se puede simplemente decir qeu es no holonomico!·········
+del sistema, hay soluciones que no son posibles. Tome el caso en el que se requiera una velocidad traslacionar que sea perpendicular a la orientación actual del robot. Entonces se tiene $\theta(t)$ como la orientación actual. $(\cos(\theta(t)), \sin(\theta(t)))$, es un vector unitario en la dirección del robot. Entonces $\mathbf{v_{per}}(t)=(-\sin(\theta(t)),\cos(\theta(t)))$ es un vector perpendicular a la orientación del robot. Tome $\mathbf{\nu}_{\perp}(t)=\left[\begin{array}{c c c} -\sin(\theta(t))& \cos(\theta(t)) & 0\end{array} \right]^t$. Sutituyendo $\mathbf{\nu}_{\perp}(t)$ en (\label{eq:inverse_kinematic_model}), se obtiene una velocidad angular en las ruedas de $\mathbf{\varphi}_{\perp}(t)=$.
+
+%OJO hay que terminar esta parte IMPORTANTE. para justificvar utilizar el punto desplazado. 
 
 \subsubsection{Modelo del punto desplazado}
 
@@ -431,30 +436,32 @@ Entonces considere el punto desplazado, cuyo vector de posición es $\mathbf{p_e}
 Luego, derivando (\ref{eq:punto_desplazado}), se obtiene la expresión en (\ref{eq:vel_desplazado}).
 
 \begin{equation}
-\dot{\mathbf{p_e}}(t)=\dot{\mathbf{p_0}}(t)+\left[\begin{array}{c c} -d\sin(\theta(t))\dot{\theta}(t)&  d\cos(\theta(t))\dot{\theta}(t)\end{array} \right]^t
+\dot{\mathbf{p_e}}(t)=\dot{\mathbf{p_0}}(t)+\left[\begin{array}{c c} -d\sin(\theta(t))\omega(t)&  d\cos(\theta(t))\omega(t)\end{array} \right]^t
 \label{eq:vel_desplazado}
 \end{equation} 
 
-Para expresar la velocidad en el punto desplazado se define $M(t)$ en (\ref{eq:matriz_m}), la matriz de trasformación del punto central al punto desplazado.
+Para expresar la velocidad en el punto desplazado se define $\Psi(t)$ en (\ref{eq:matriz_m}), la matriz de trasformación del punto central al punto desplazado.
 
 \begin{equation}
 \dot{\mathbf{p_e}}(t)=\left[ \begin{array}{c c c} 1&  0& -d\sin(\theta(t))\\
                                                  0&  1&  d\cos(\theta(t))\end{array}  \right] \mathbf{\nu}(t)
-=M(t) \mathbf{\nu}(t)
+=\Psi(t) \mathbf{\nu}(t)
 \label{eq:matriz_m}
 \end{equation} 
 
 
-Ahora, se define $A(t)=M(t)\Lambda(t)$, para obtener la relación entre $\dot{\mathbf{p_e}}(t)$, y $\mathbf{\omega}(t)$. En (\ref{eq:modelo_desplazado}) se presenta el modelo cinemático directo del punto desplazado.
+Ahora, se define $A(t)=\Psi(t)\Lambda(t)$, para obtener la relación entre $\dot{\mathbf{p_e}}(t)$, y $\mathbf{\varphi}(t)$. Como se presenta en (\ref{eq:modelo_desplazado}).
 
 \begin{equation}
 \dot{\mathbf{p_e}}(t)= \left[ \begin{array}{c c} 0.5r\cos(\theta(t))-\frac{dr\sin(\theta(t))}{b}& 0.5\cos(\theta(t))+\frac{er\sin(\theta(t))}{b}  \\
-                                                 -0.5r\sin(\theta(t))-\frac{dr\cos(\theta(t))}{b}& 0.5\sin(\theta(t))-\frac{dr\cos(\theta(t))}{b}  \end{array}  \right] \mathbf{\omega}(t)=A(t)\mathbf{\omega}(t)
+                                                 -0.5r\sin(\theta(t))-\frac{dr\cos(\theta(t))}{b}& 0.5\sin(\theta(t))-\frac{dr\cos(\theta(t))}{b}  \end{array}  \right] \mathbf{\varphi}(t)=A(t)\mathbf{\varphi}(t)
 \label{eq:modelo_desplazado}
 \end{equation}
 
+Se define a $\theta$ como el estado del sistema. Entocnes la relación entrada-estado viene dada en (\ref{eq:local_dir}). y la relación entrada-salida-estado viene dada en (\ref{eq:modelo_desplazado}). 
 
-Para poder controlar al robot, se necesita el modelo inverso. Primero se debe determinar si es posible encontrar el modelo, entonces se computa el determinante de la matriz $A(t)$. Se tiene que $det(A)=-\frac{dr^2}{b}$, de manera que el determinante es no nulo para todo valor de $t$. Entonces siempre es posible encontrar la matriz inversa de $A(t)$, esta se denota por $A^{-1}(t)$. Finalmente, en las ecuaciones (\ref{eq:a_inverso}) y (\ref{eq:desplazado_inverso}) se describe el modelo cinemático inverso para el punto desplazado.
+
+Para poder controlar al robot, se necesita el modelo inverso. Primero se debe determinar si es posible encontrarlo. Se tiene que $det(A)=-\frac{dr^2}{b}$, de manera que el determinante es no nulo para todo valor de $t$. Entonces siempre es posible encontrar la matriz inversa de $A(t)$, esta se denota por $A^{-1}(t)$, su resultado se muestra en (\ref{eq:a_inverso}). Para el modelo inverso, se tiene a $\mathbf{\varphi}(t)$ como la salida, y a $\dot{\mathbf{p_e}}(t)$ como la entrada, pero el estado no cambia; $\theta(t)$ es el estado de este modelo. Entonces en (\ref{eq:desplazado_inverso}) se muestra la relación entre la entrada y la salida del modelo inverso. De sustituir (\ref{eq:local_dir}) en  (\ref{eq:desplazado_inverso}), se obtiene (\ref{eq:estado_entrada_desplazado}). Finalmente, el modelo cinemático inverso para el punto desplazado viene dado por las ecuaciones (\ref{eq:a_inverso}),(\ref{eq:estado_entrada_desplazado}) y (\ref{eq:desplazado_inverso}).
 
 \begin{equation}
 A^{-1}(t)=
@@ -470,9 +477,34 @@ A^{-1}(t)=
 \end{equation}
 
 \begin{equation}
-\mathbf{\omega}(t)=A^{-1}(t)\dot{\mathbf{p_e}}(t)
+\mathbf{\varphi}(t)=A^{-1}(t)\dot{\mathbf{p_e}}(t)
 \label{eq:desplazado_inverso}
 \end{equation}
+
+\begin{equation}
+\dot{\theta}(t)=\left[
+\begin{array}{cc}
+ \frac{b}{r} & \frac{-b}{r}
+\end{array}
+\right] A^{-1} \dot{\mathbf{p_e}}(t)
+\label{eq:estado_entrada_desplazado}
+\end{equation}
+
+%IMPORTANTE definir centro geometrico. Puede que sea distinto al punto medio entre las llantas!
+Para analizar el comportamiento del centro geométrico del robot, y el punto desplazado, se debe encontrar una transformación que los relacione. De esta manera se puede verificar qeu al controlar el punto desplazado, se logra un control indirecto sobre el centro geométrico, y que la orientación del robot se adapta, conforme el robot avanza en la trayectoria. Sustituyendo (\ref{eq:kinematic_model}) en (\ref{eq:desplazado_inverso}) se obtiene (\ref{eq:desplazado_contra_centro}), que es la relación entre la velocidad en el punto desplazado (que se puede controlar) y el centro geométrico (sobre el qeu no se tiene control completo).
+
+ \begin{equation}
+\mathbf{\nu}(t)=\Lambda A^{-1}\dot{\mathbf{p_e}}(t)=
+\left[
+\begin{array}{cc}
+ \cos^2(\theta(t)) & \cos(\theta(t))\sin(\theta(t))\\
+ \cos(\theta(t))\sin(\theta(t))& \sin^2(\theta(t))\\
+\frac{-\sin(\theta(t))}{d}&\frac{\cos(\theta(t))}{d}
+\end{array}
+\right] \dot{\mathbf{p_e}}(t)
+\label{eq:desplazado_contra_centro}
+\end{equation}
+
 
 
 
